local git user test

--- a/session-2/homework/homepage.html
+++ b/session-2/homework/homepage.html
@@ -56,7 +56,7 @@
 
         <h3>EXPERIENCE</h3>
         <ul class="experience">
-            <li>nothing</li>
+            <li>nothing else</li>
         </ul>
         <hr>
         <a href="./contact.html" style = "text-decoration: none; font-size:larger; color: #D36300; ">Contact me</a>
