--- a/session-2/homework/contact.html
+++ b/session-2/homework/contact.html
@@ -27,7 +27,7 @@
         <h1>NGUYEN ANH TU</h1>
     </div>
 
-    <hr>
+    <hr style="border-top: 5px dashed gray; width: 50%; text-align:left;margin-left:0">
 
     <div class="main">
         <h3>Leave me a message here</h3>
