--- a/session-2/homework/homepage.html
+++ b/session-2/homework/homepage.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Session2-Html</title>
-    <link rel="stylesheet" href="homepage.css">
 </head>
 
 <style>
@@ -25,12 +24,14 @@
         </a>
         <h1>NGUYEN ANH TU</h1>
     </div>
-    <hr>
+
+    <hr style="border-top: 5px dashed gray; width: 50%; text-align:left;margin-left:0">
+
     <div class="main">
         <h3>INTEREST</h3>
         <ul class="interest">
             <li>
-                Gundam / Gunpla
+                Painting Figure, making Diorama (Gunpla/Pokemon/etc...)
             </li>
             <li>
                 Gaming: CS:GO; Starcraft
@@ -42,8 +43,8 @@
 
         <h3>SKILLS</h3>
         <ul class="skills">
-            <li>Doing nothing</li>
-            <li>Sleeping anywhere</li>
+            <li> Front end web developement: Html, CS:S, JS </li>
+            <li> Something in A.I </li>
         </ul>
 
         <h3>EDUCATION</h3>
@@ -56,9 +57,14 @@
 
         <h3>EXPERIENCE</h3>
         <ul class="experience">
-            <li>nothing else</li>
+            <li>
+                <a href="https://www.facebook.com/pokecraftvietnam" style="text-decoration: none">PokeCraft Founder</a>
+            </li>
+            <li>Dot Grid Stationery notebook handmade</li>
         </ul>
-        <hr>
+
+        <hr style="border-top: 5px dashed gray; width: 50%; text-align:left;margin-left:0">
+
         <a href="./contact.html" style = "text-decoration: none; font-size:larger; color: #D36300; ">Contact me</a>
     </div>
 </body>
