--- a/session-3/index.html
+++ b/session-3/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<style>
-	div {
-		background-color: red;
-	}
-	.blue {
-		background-color: blue;
-	}
-</style>
-<body>
-    <div class="blue" style="background-color: green;">Which color?</div> <!-- Green -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Session 3</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <style>
+    div {
+      background-color: red;
+    }
+    .blue {
+      background-color: blue;
+    }
+  </style>
+  <body>
+    <div class="blue" style="background-color: green">Which color?</div>
+    <!-- Green -->
+  </body>
 </html>
