add homework ss3

--- a/session-3/index.html
+++ b/session-3/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Session 3</title>
-    <link rel="stylesheet" href="style.css">
   </head>
-  <style>
-    div {
-      background-color: red;
-    }
-    .blue {
-      background-color: blue;
-    }
-  </style>
+
   <body>
-    <div class="blue" style="background-color: green">Which color?</div>
-    <!-- Green -->
+    <h1 style="color: rgb(176, 81, 3)">
+      A quick brown fox jumps over the lazy dog.
+    </h1>
+    <h1>A quick brown fox jumps over the lazy dog.</h1>
+    <h1>A quick brown fox jumps over the lazy dog.</h1>
+    <h1>A quick brown fox jumps over the lazy dog.</h1>
+
+    <p id="p1">A quick brown fox</p>
+    <p id="p2">jumps over the lazy dog</p>
+    <h3 class="custom-text">You can't see this</h3>
   </body>
 </html>
