--- a/session-3/homework/workbookss3/workbook.html
+++ b/session-3/homework/workbookss3/workbook.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Session2-Html</title>
+    <title>Workbook Session 3</title>
 </head>
-
-<style>
-    body {
-        background-image: url('../images/RX-78-back.jpg');
-        background-size: cover;
-    }
-</style>
-
 <body>
     <!-- Main profile -->
     <h1>Resume</h1>
@@ -72,5 +63,4 @@
         <a href="./contact.html" style = "text-decoration: none; font-size:larger; color: #D36300; ">Contact me</a>
     </div>
 </body>
-
 </html>
