add homework ss3 90% complete

--- a/session-3/homework/zalohomework/zalohomework.html
+++ b/session-3/homework/zalohomework/zalohomework.html
@@ -8,8 +8,8 @@
     <title>Zalo Homework</title>
 </head>
 <body>
-    <img src="./zaloimg.jpg" alt="template" width="50%">
     <div class="main">
+        <img src="./zaloimg.jpg" alt="template" width="100%">
         <h2 class="main__title">
             Learn more about beautiful furniture web design combinations
         </h1>
@@ -20,7 +20,7 @@
             Today we will teach you how to find professional materials for your furniture website design
         </h3>
         <p class="content">
-            A quick brown fox jumps over the lazay dog, A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazay dog. A quick brown fox jumps over the lazay dog. A quick brown fox jumps over the lazay dog
+            A quick brown fox jumps over the lazy dog, A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazay dog
         </p>
         <button class="readmore">Read More</button>
     </div>
