--- a/session-3/homework/workbookss3/contact.html
+++ b/session-3/homework/workbookss3/contact.html
@@ -7,22 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="./contact.css">
+    <script src="https://kit.fontawesome.com/9b6333b687.js" crossorigin="anonymous"></script>
 </head>
 <style>
     body {
-        background-image: url('../images/RX-78-back.jpg');
+        background-image: url('/C4EJS129-AnhTu/images/RX-78-back.jpg');
         background-size: cover;
     }
 </style>
 
 <body>
     <h2>
-        <a href="./homepage.html" style="color: #bbbbb9; text-decoration: none; ">Back to homepage</a>
+        <a href="../workbookss3/workbook.html" style="color: #bbbbb9; text-decoration: none; ">Back to homepage</a>
     </h2>
 
     <div class="me">
         <a href="#">
-            <img src="../images/avatar.jpg" alt="avatar" width="300px" height="300px">
+            <img class="avatar" src="/C4EJS129-AnhTu/images/avatar.jpg" alt="avatar" width="300px" height="300px">
         </a>
         <h1>NGUYEN ANH TU</h1>
     </div>
@@ -43,7 +44,7 @@
 
         <input type="button" value="submit">
         <br><br>
-        <a href="./homepage.html">
+        <a href = "https://www.facebook.com/groups/347273267552229" target = "blank">
             <p style="font-size: medium;"> contact me page </p>
         </a>
     </div>
