--- a/session-3/homework/workbookss3/workbook.html
+++ b/session-3/homework/workbookss3/workbook.html
@@ -4,28 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="contact.css">
+    <script src="https://kit.fontawesome.com/9b6333b687.js" crossorigin="anonymous"></script>
     <title>Workbook Session 3</title>
 </head>
+<style>
+    body {
+        background-image: url('/C4EJS129-AnhTu/images/RX-78-back.jpg');
+        background-size: cover;
+    }
+</style>
 <body>
     <!-- Main profile -->
     <h1>Resume</h1>
     <div class="me">
         <a href="#">
-            <img src="../images/avatar.jpg" alt="avatar" width="300px" height="300px">
+            <img class="avatar" src="/C4EJS129-AnhTu/images/avatar.jpg" alt="avatar" width="300px" height="300px">
         </a>
         <h1>NGUYEN ANH TU</h1>
     </div>
 
-    <hr style = "border-top: 5px dashed gray; width: 50%; text-align:left; margin-left: 0 ">
+    <hr class="dashline" style = "border-top: 5px dashed gray; width: 50%; text-align:left; margin-left: 0 ">
 
     <div class = "main">
         <h3>INTEREST</h3>
         <ul class="interest">
             <li>
-                Painting Figure, making Diorama (Gunpla/Pokemon/etc...)
-            </li>
+                Painting Figure, making Diorama (Gunpla/Pokemon/etc...) <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+            </li> 
             <li>
-                Gaming: CS:GO; Starcraft
+                Gaming: CS:GO; Starcraft <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
             </li>
             <li>
                 Handmade: Leather, notebook, etc...
@@ -36,8 +44,6 @@
         <ul class="skills">
             <li> 
                 Front end web developement: Html, CS:S, JS 
-                <i class="fa-thin fa-star"></i>
-                
             </li> 
             <li> Something in A.I </li>
         </ul>
@@ -46,19 +52,19 @@
         <ul class="education">
             <li>Hanoi Open University (Fired)</li>
             <li>
-                <a href="#">MindX School - Firstclass</a>
+                <a href = "https://www.facebook.com/groups/347273267552229" target = "blank">MindX School - Firstclass</a>
             </li>
         </ul>
 
         <h3>EXPERIENCE</h3>
         <ul class="experience">
             <li>
-                <a href="https://www.facebook.com/pokecraftvietnam" style="text-decoration: none">PokeCraft Founder</a>
+                <a href="https://www.facebook.com/pokecraftvietnam" style="text-decoration: none" target = "blank">PokeCraft Founder</a>
             </li>
             <li>Dot Grid Stationery notebook handmade</li>
         </ul>
 
-        <hr style="border-top: 5px dashed gray; width: 50%; text-align:left;margin-left:0">
+        <hr  class="dashline" style="border-top: 5px dashed gray; width: 50%; text-align:left;margin-left:0">
 
         <a href="./contact.html" style = "text-decoration: none; font-size:larger; color: #D36300; ">Contact me</a>
     </div>
