homework ss3 completed

--- a/session-3/homework/workbookss3/contact.html
+++ b/session-3/homework/workbookss3/contact.html
@@ -28,7 +28,7 @@
         <h1>NGUYEN ANH TU</h1>
     </div>
 
-    <hr style="border-top: 5px dashed gray; width: 50%; text-align:left;margin-left:0">
+    <hr>
 
     <div class="main">
         <h3>Leave me a message here</h3>
@@ -44,8 +44,9 @@
 
         <input type="button" value="submit">
         <br><br>
+        <hr>
         <a href = "https://www.facebook.com/groups/347273267552229" target = "blank">
-            <p style="font-size: medium;"> contact me page </p>
+            <p> contact me page </p>
         </a>
     </div>
 </body>
