--- a/session-3/homework/workbookss3/workbook.html
+++ b/session-3/homework/workbookss3/workbook.html
@@ -8,12 +8,14 @@
     <script src="https://kit.fontawesome.com/9b6333b687.js" crossorigin="anonymous"></script>
     <title>Workbook Session 3</title>
 </head>
+
 <style>
     body {
         background-image: url('/C4EJS129-AnhTu/images/RX-78-back.jpg');
         background-size: cover;
     }
 </style>
+
 <body>
     <!-- Main profile -->
     <h1>Resume</h1>
@@ -24,7 +26,7 @@
         <h1>NGUYEN ANH TU</h1>
     </div>
 
-    <hr class="dashline" style = "border-top: 5px dashed gray; width: 50%; text-align:left; margin-left: 0 ">
+    <hr>
 
     <div class = "main">
         <h3>INTEREST</h3>
@@ -36,16 +38,18 @@
                 Gaming: CS:GO; Starcraft <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
             </li>
             <li>
-                Handmade: Leather, notebook, etc...
+                Handmade: Leather, notebook, etc... <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
             </li>
         </ul>
 
         <h3>SKILLS</h3>
         <ul class="skills">
             <li> 
-                Front end web developement: Html, CS:S, JS 
+                Front end web developement: Html, CS:S, JS <i class="fa-solid fa-star"></i>
             </li> 
-            <li> Something in A.I </li>
+            <li> 
+                Something in A.I <i class="fa-solid fa-star"></i>
+            </li>
         </ul>
 
         <h3>EDUCATION</h3>
@@ -64,7 +68,7 @@
             <li>Dot Grid Stationery notebook handmade</li>
         </ul>
 
-        <hr  class="dashline" style="border-top: 5px dashed gray; width: 50%; text-align:left;margin-left:0">
+        <hr>
 
         <a href="./contact.html" style = "text-decoration: none; font-size:larger; color: #D36300; ">Contact me</a>
     </div>
