--- a/session-3/homework/zalohomework/zalohomework.html
+++ b/session-3/homework/zalohomework/zalohomework.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homework.css">
+    <!-- font Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&family=League+Gothic&family=Merriweather:wght@300;400;700&family=Montserrat:wght@100;500&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <!-- End of font Google -->
     <title>Zalo Homework</title>
 </head>
 <body>
