hw ss3 update workbook font

--- a/session-3/homework/workbookss3/contact.html
+++ b/session-3/homework/workbookss3/contact.html
@@ -1,54 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="./contact.css">
-    <script src="https://kit.fontawesome.com/9b6333b687.js" crossorigin="anonymous"></script>
-</head>
-<style>
+    <link rel="stylesheet" href="./contact.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&family=League+Gothic&family=Merriweather:wght@300;400;700&family=Montserrat:wght@100;500&family=Open+Sans:wght@300;500&family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/9b6333b687.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <style>
     body {
-        background-image: url('/C4EJS129-AnhTu/images/RX-78-back.jpg');
-        background-size: cover;
+      background-image: url("/C4EJS129-AnhTu/images/RX-78-back.jpg");
+      background-size: cover;
     }
-</style>
+  </style>
 
-<body>
+  <body>
     <h2>
-        <a href="../workbookss3/workbook.html" style="color: #bbbbb9; text-decoration: none; ">Back to homepage</a>
+      <a
+        href="../workbookss3/workbook.html"
+        style="color: #bbbbb9; text-decoration: none"
+        >Back to homepage</a
+      >
     </h2>
 
     <div class="me">
-        <a href="#">
-            <img class="avatar" src="/C4EJS129-AnhTu/images/avatar.jpg" alt="avatar" width="300px" height="300px">
-        </a>
-        <h1>NGUYEN ANH TU</h1>
+      <a href="#">
+        <img
+          class="avatar"
+          src="/C4EJS129-AnhTu/images/avatar.jpg"
+          alt="avatar"
+          width="300px"
+          height="300px"
+        />
+      </a>
+      <h1>NGUYEN ANH TU</h1>
     </div>
 
-    <hr>
+    <hr />
 
     <div class="main">
-        <h3>Leave me a message here</h3>
-        <form class="email">
-            <label for="email">Your emails:</label><br>
-            <input type="email" placeholder="example@gmail.com">
-        </form>
+      <h3>Leave me a message here</h3>
+      <form class="email">
+        <label for="email">Your emails:</label><br />
+        <input type="email" placeholder="example@gmail.com" />
+      </form>
 
-        <form class="message">
-            <label for="message">Message:</label><br>
-            <textarea cols="30" rows="10" placeholder="Leave your message here"></textarea>
-        </form>
+      <form class="message">
+        <label for="message">Message:</label><br />
+        <textarea
+          cols="30"
+          rows="10"
+          placeholder="Leave your message here"
+        ></textarea>
+      </form>
 
-        <input type="button" value="submit">
-        <br><br>
-        <hr>
-        <a href = "https://www.facebook.com/groups/347273267552229" target = "blank">
-            <p> contact me page </p>
-        </a>
+      <input type="button" value="submit" />
+      <br /><br />
+      <hr />
+      <a href="https://www.facebook.com/groups/347273267552229" target="blank">
+        <p>contact me page</p>
+      </a>
     </div>
-</body>
-
+  </body>
 </html>
