--- a/session-3/homework/workbookss3/workbook.html
+++ b/session-3/homework/workbookss3/workbook.html
@@ -1,76 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contact.css">
-    <script src="https://kit.fontawesome.com/9b6333b687.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="contact.css" />
+    <script
+      src="https://kit.fontawesome.com/9b6333b687.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&family=League+Gothic&family=Merriweather:wght@300;400;700&family=Montserrat:wght@100;500&family=Open+Sans:wght@300;500&family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
     <title>Workbook Session 3</title>
-</head>
+  </head>
 
-<style>
+  <style>
     body {
-        background-image: url('/C4EJS129-AnhTu/images/RX-78-back.jpg');
-        background-size: cover;
+      background-image: url("/C4EJS129-AnhTu/images/RX-78-back.jpg");
+      background-size: cover;
     }
-</style>
+  </style>
 
-<body>
+  <body>
     <!-- Main profile -->
     <h1>Resume</h1>
     <div class="me">
-        <a href="#">
-            <img class="avatar" src="/C4EJS129-AnhTu/images/avatar.jpg" alt="avatar" width="300px" height="300px">
-        </a>
-        <h1>NGUYEN ANH TU</h1>
+      <a href="#">
+        <img
+          class="avatar"
+          src="/C4EJS129-AnhTu/images/avatar.jpg"
+          alt="avatar"
+          width="300px"
+          height="300px"
+        />
+      </a>
+      <h1>NGUYEN ANH TU</h1>
     </div>
 
-    <hr>
+    <hr />
 
-    <div class = "main">
-        <h3>INTEREST</h3>
-        <ul class="interest">
-            <li>
-                Painting Figure, making Diorama (Gunpla/Pokemon/etc...) <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            </li> 
-            <li>
-                Gaming: CS:GO; Starcraft <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            </li>
-            <li>
-                Handmade: Leather, notebook, etc... <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            </li>
-        </ul>
+    <div class="main">
+      <h3>INTEREST</h3>
+      <ul class="interest">
+        <li>
+          Painting Figure, making Diorama (Gunpla/Pokemon/etc...)
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </li>
+        <li>
+          Gaming: CS:GO; Starcraft <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </li>
+        <li>
+          Handmade: Leather, notebook, etc... <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </li>
+      </ul>
 
-        <h3>SKILLS</h3>
-        <ul class="skills">
-            <li> 
-                Front end web developement: Html, CS:S, JS <i class="fa-solid fa-star"></i>
-            </li> 
-            <li> 
-                Something in A.I <i class="fa-solid fa-star"></i>
-            </li>
-        </ul>
+      <h3>SKILLS</h3>
+      <ul class="skills">
+        <li>
+          Front end web developement: Html, CS:S, JS
+          <i class="fa-solid fa-star"></i>
+        </li>
+        <li>Something in A.I <i class="fa-solid fa-star"></i></li>
+      </ul>
 
-        <h3>EDUCATION</h3>
-        <ul class="education">
-            <li>Hanoi Open University (Fired)</li>
-            <li>
-                <a href = "https://www.facebook.com/groups/347273267552229" target = "blank">MindX School - Firstclass</a>
-            </li>
-        </ul>
+      <h3>EDUCATION</h3>
+      <ul class="education">
+        <li>Hanoi Open University (Fired)</li>
+        <li>
+          <a
+            href="https://www.facebook.com/groups/347273267552229"
+            target="blank"
+            >MindX School - Firstclass</a
+          >
+        </li>
+      </ul>
 
-        <h3>EXPERIENCE</h3>
-        <ul class="experience">
-            <li>
-                <a href="https://www.facebook.com/pokecraftvietnam" style="text-decoration: none" target = "blank">PokeCraft Founder</a>
-            </li>
-            <li>Dot Grid Stationery notebook handmade</li>
-        </ul>
+      <h3>EXPERIENCE</h3>
+      <ul class="experience">
+        <li>
+          <a
+            href="https://www.facebook.com/pokecraftvietnam"
+            style="text-decoration: none"
+            target="blank"
+            >PokeCraft Founder</a
+          >
+        </li>
+        <li>Dot Grid Stationery notebook handmade</li>
+      </ul>
 
-        <hr>
+      <hr />
 
-        <a href="./contact.html" style = "text-decoration: none; font-size:larger; color: #D36300; ">Contact me</a>
+      <a
+        href="./contact.html"
+        style="text-decoration: none; font-size: larger; color: #d36300"
+        >Contact me</a
+      >
     </div>
-</body>
+  </body>
 </html>
