--- a/session-5/homework/homework.html
+++ b/session-5/homework/homework.html
@@ -1,39 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&family=League+Gothic&family=Merriweather:wght@300;400;700&family=Montserrat:wght@100;500&family=Open+Sans:wght@300;500&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Homework</title>
-</head>
-<body>
-<!-- Navbar -->
+  </head>
+  <body>
+    <!-- Navbar -->
     <div class="navbar">
-        <div class="navbar-content">
-            <div class="navbar-content left"> trible stroke icon </div>
-            <div class="navbar-content left"> homeicon </div>
+      <div class="navbar-content">
+        <div class="navbar-content left">trible stroke icon</div>
+        <div class="navbar-content left">homeicon</div>
 
-            <div class="navbar-content mid">
-                <input type="text" placeholder="Search">
+        <div class="navbar-content mid">
+          <input type="text" placeholder="Search" />
+        </div>
+
+        <div class="navbar-content right"></div>
+        <div class="navbar-content right"></div>
+      </div>
+    </div>
+    <!-- End of Navbar -->
+
+    <hr />
+    <!-- main page -->
+    <div class="main">
+      <div class="mainbox">
+        <!-- 1st box -->
+
+        <div class="box">
+          <div class="box1-left">
+            <img
+              class="avatar"
+              src="/C4EJS129-AnhTu/images/artanis.jpg"
+              alt="avatar"
+            />
+            <span class="contact">
+              <i class="fa-solid fa-message"></i>
+              <i class="fa-solid fa-microphone"></i>
+              <i class="fa-solid fa-video"></i>
+            </span>
+          </div>
+
+          <div class="box1-right">
+            <h3 class="name">Artanis</h3>
+
+            <div class="right-content">
+              <h4 class="job">leader of the Daelaam</h4>
+              <p class="location">
+                <i class="fa-solid fa-location-dot"></i>
+                Auir - Not on Earth
+              </p>
+              <span class="language">
+                <p>Speaks:</p>
+                <span class="language-list">
+                  <p class="lang1">English,</p>
+                  <p class="lang2">Khalani </p>
+                </span>
+              </span>
             </div>
 
-            <div class="navbar-content right"> </div>
-            <div class="navbar-content right"> </div>
+          </div>
         </div>
-    </div>
-<!-- End of Navbar -->
 
-<div class="main">
-    <div class="container">
-        <div class="mainbody person">
-            <div class="content">
-                <div class="avatar"></div>
-            </div>
+        <!-- end of 1st box -->
+
+        <!-- 2nd box -->
+        <div class="box box2">
+          <div class="box2 left">
+            <img src="/C4EJS129-AnhTu/images/jraynor.jpg" alt="avatar" />
+            <span class="contact">
+              <i class="fa-solid fa-message"></i>
+              <i class="fa-solid fa-microphone"></i>
+              <i class="fa-solid fa-video"></i>
+            </span>
+          </div>
+          <div class="box2 right">
+            <h3 class="name">James Raynor</h3>
+            <h4 class="job">Terran leader</h4>
+            <span class="language">
+              <p>Speaks:</p>
+              <span class="language list">
+                <p class="lang1">English,</p>
+                <p class="lang2">Terran</p>
+              </span>
+            </span>
+          </div>
         </div>
+
+        <!-- end of 2nd box -->
+      </div>
     </div>
-</div>
-    
-
-
-</body>
+  </body>
 </html>
