--- a/session-5/homework/homework.html
+++ b/session-5/homework/homework.html
@@ -1,156 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&family=League+Gothic&family=Merriweather:wght@300;400;700&family=Montserrat:wght@100;500&family=Open+Sans:wght@300;500&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap"
+      rel="stylesheet"
+    />
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&family=League+Gothic&family=Merriweather:wght@300;400;700&family=Montserrat:wght@100;500&family=Open+Sans:wght@300;500&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap"
-    rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Homework</title>
+  </head>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Homework</title>
-</head>
-
-<body>
-  <!-- Navbar -->
-  <div class="navbar">
-    <div class="navbar-content">
-      <div class="navbar-content left">trible stroke icon</div>
-      <div class="navbar-content left">homeicon</div>
-
-      <div class="navbar-content mid">
-        <input type="text" placeholder="Search" />
+  <body>
+    <!-- header -->
+    <div class="header">
+      <!-- left box -->
+      <div class="header left-header">
+        <i class="fa-solid fa-bars"></i>
+        <p>Social</p>
       </div>
 
-      <div class="navbar-content right"></div>
-      <div class="navbar-content right"></div>
+      <!-- Search - Middle box -->
+      <div class="header searchbox">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" placeholder="Search..." />
+      </div>
+      <!-- right box  -->
+      <div class="header right-header">
+        <i class="fa-solid fa-house"></i>
+        <i class="fa-regular fa-heart"></i>
+        <img src="/C4EJS129-AnhTu/images/avatar.jpg" alt="avatar" />
+      </div>
     </div>
-  </div>
-  <!-- End of Navbar -->
+    <!-- End of header -->
 
-  <hr />
-  <!-- main page -->
-  <div class="main">
-    <div class="mainbox">
-      <!-- 1st box -->
+<!-- Speakers -->
+<div class="speakers">
+  <h2><</h2>
+  <h1>Speakers</h1>
+</div>
+<!-- end of Speakers -->
 
-      <div class="box">
 
-        <div class="box-left">
-          <div class="imgbox">
-            <img class="avatar" src="/C4EJS129-AnhTu/images/artanis.jpg" alt="avatar" />
+
+    <!-- main page -->
+    <div class="main">
+      <div class="mainbox">
+        <!-- 1st box -->
+        <div class="box">
+          <div class="box-left">
+            <div class="imgbox">
+              <img
+                class="avatar"
+                src="/C4EJS129-AnhTu/images/artanis.jpg"
+                alt="avatar"
+              />
+            </div>
+            <span class="contact">
+              <i class="fa-solid fa-message"></i>
+              <i class="fa-solid fa-microphone"></i>
+              <i class="fa-solid fa-video"></i>
+            </span>
           </div>
-          <span class="contact">
-            <i class="fa-solid fa-message"></i>
-            <i class="fa-solid fa-microphone"></i>
-            <i class="fa-solid fa-video"></i>
-          </span>
-        </div>
 
-        <div class="box-right">
-          <!-- Header: Name & Job -->
-          <h3 class="name">ARTANIS</h3>
-          <div class="right-content">
-            <h5 class="right job">leader of the Daelaam</h5>
-            <!-- End of Header: Name & Job -->
+          <div class="box-right">
+            <!-- Header: Name & Job -->
+            <h3 class="name">ARTANIS</h3>
+            <div class="right-content">
+              <h5 class="right job">leader of the Daelaam</h5>
+              <!-- End of Header: Name & Job -->
 
-            <!-- more info -->
-            <div class="more-info">
-              <p class="right location">
-                <i class="fa-solid fa-location-dot"></i>
-                Auir - Not on Earth
-              </p>
+              <!-- more info -->
+              <div class="more-info">
+                <p class="right location">
+                  <i class="fa-solid fa-location-dot"></i>
+                  Auir - Not on Earth
+                </p>
 
-              <span class="right language">
-                <p class="speaks">Speaks:</p>
-                <span class="language-list">
-                  <p class="lang1">English,</p>
-                  <p class="lang2">Khalani </p>
+                <span class="right language">
+                  <p class="speaks">Speaks:</p>
+                  <span class="language-list">
+                    <p class="lang1">English,</p>
+                    <p class="lang2">Khalani</p>
+                  </span>
                 </span>
-              </span>
-            </div>
-            <!-- end of more info -->
+              </div>
+              <!-- end of more info -->
 
-            <!-- Social media icons box -->
-            <div class="right social">
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-instagram"></i>
-              <i class="fa-brands fa-google"></i>
-              <i class="fa-brands fa-github"></i>
+              <!-- Social media icons box -->
+              <div class="right social">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-google"></i>
+                <i class="fa-brands fa-github"></i>
+              </div>
+              <!-- End of Social media icons box -->
             </div>
-            <!-- End of Social media icons box -->
-
           </div>
         </div>
 
-      </div>
+        <!-- end of 1st box -->
 
-      <!-- end of 1st box -->
+        <!-- 2nd box -->
 
-      <!-- 2nd box -->
-
-      <div class="box">
-
-        <div class="box-left">
-          <div class="imgbox">
-            <img class="avatar" src="/C4EJS129-AnhTu/images/jraynor.jpg" alt="avatar" />
+        <div class="box">
+          <div class="box-left">
+            <div class="imgbox">
+              <img
+                class="avatar"
+                src="/C4EJS129-AnhTu/images/jraynor.jpg"
+                alt="avatar"
+              />
+            </div>
+            <span class="contact">
+              <i class="fa-solid fa-message"></i>
+              <i class="fa-solid fa-microphone"></i>
+              <i class="fa-solid fa-video"></i>
+            </span>
           </div>
-          <span class="contact">
-            <i class="fa-solid fa-message"></i>
-            <i class="fa-solid fa-microphone"></i>
-            <i class="fa-solid fa-video"></i>
-          </span>
-        </div>
 
-        <div class="box-right">
-          <!-- Header: Name & Job -->
-          <h3 class="name">JIM RAYNOR</h3>
-          <div class="right-content">
-            <h5 class="right job">Terran Marshal</h5>
-            <!-- End of Header: Name & Job -->
+          <div class="box-right">
+            <!-- Header: Name & Job -->
+            <h3 class="name">JIM RAYNOR</h3>
+            <div class="right-content">
+              <h5 class="right job">Terran Marshal</h5>
+              <!-- End of Header: Name & Job -->
 
-            <!-- more info -->
-            <div class="more-info">
-              <p class="right location">
-                <i class="fa-solid fa-location-dot"></i>
-                Shiloh - a planet in the Koprulu sector.
-              </p>
+              <!-- more info -->
+              <div class="more-info">
+                <p class="right location">
+                  <i class="fa-solid fa-location-dot"></i>
+                  Shiloh - a planet in the Koprulu sector.
+                </p>
 
-              <span class="right language">
-                <p class="speaks">Speaks:</p>
-                <span class="language-list">
-                  <p class="lang1">English,</p>
-                  <p class="lang2">Khalani </p>
+                <span class="right language">
+                  <p class="speaks">Speaks:</p>
+                  <span class="language-list">
+                    <p class="lang1">English,</p>
+                    <p class="lang2">Khalani</p>
+                  </span>
                 </span>
-              </span>
-            </div>
-            <!-- end of more info -->
+              </div>
+              <!-- end of more info -->
 
-            <!-- Social media icons box -->
-            <div class="right social">
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-instagram"></i>
-              <i class="fa-brands fa-google"></i>
-              <i class="fa-brands fa-github"></i>
+              <!-- Social media icons box -->
+              <div class="right social">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-google"></i>
+                <i class="fa-brands fa-github"></i>
+              </div>
+              <!-- End of Social media icons box -->
             </div>
-            <!-- End of Social media icons box -->
-
           </div>
         </div>
 
+        <!-- end of 2nd box -->
       </div>
-
-      <!-- end of 2nd box -->
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
