day6 homework completed

--- a/session-5/homework/homework.html
+++ b/session-5/homework/homework.html
@@ -168,6 +168,57 @@
         </div>
 
         <!-- end of 2nd box -->
+        <div class="box">
+          <div class="box-left">
+            <div class="imgbox">
+              <img
+                class="avatar"
+                src="/C4EJS129-AnhTu/images/artanis.jpg"
+                alt="avatar"
+              />
+            </div>
+            <span class="contact">
+              <i class="fa-solid fa-message"></i>
+              <i class="fa-solid fa-microphone"></i>
+              <i class="fa-solid fa-video"></i>
+            </span>
+          </div>
+
+          <div class="box-right">
+            <!-- Header: Name & Job -->
+            <h3 class="name">ARTANIS</h3>
+            <div class="right-content">
+              <h5 class="right job">leader of the Daelaam</h5>
+              <!-- End of Header: Name & Job -->
+
+              <!-- more info -->
+              <div class="more-info">
+                <p class="right location">
+                  <i class="fa-solid fa-location-dot"></i>
+                  Auir - Not on Earth
+                </p>
+
+                <span class="right language">
+                  <p class="speaks">Speaks:</p>
+                  <span class="language-list">
+                    <p class="lang1">English,</p>
+                    <p class="lang2">Khalani</p>
+                  </span>
+                </span>
+              </div>
+              <!-- end of more info -->
+
+              <!-- Social media icons box -->
+              <div class="right social">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-google"></i>
+                <i class="fa-brands fa-github"></i>
+              </div>
+              <!-- End of Social media icons box -->
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
