sss7-hw7-4 completed

--- a/session-7/homeworkss7/hw7-3/hw7-3.html
+++ b/session-7/homeworkss7/hw7-3/hw7-3.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework SS7</title>
+    <title>HW7-3</title>
+    <script src="hw7-3.js"></script>
 </head>
 <body>
-    
+    BÀI 3: <br>
+    Viết chương trình JS để người dùng nhập vào 3 số nguyên và tìm số lớn nhất trong 3 số đó.
 </body>
 </html>
