SS7 homework IF completed

--- a/session-7/homeworkss7/hw7-4/hw7-4.html
+++ b/session-7/homeworkss7/hw7-4/hw7-4.html
@@ -12,9 +12,9 @@
         Các điểm bài kiểm tra, điểm thi giữa kỳ, điểm thi cuối kỳ. Nếu:</h3>
     <ul>
         <li>Điểm trung bình >= 9.0 là hạng A.</li>
-        <li>Điểm trung bình >=7.0 và < 9.0 là hạng B</li>
-        <li>Điểm trung bình >=5.0 và < 7.0 là hạng C </li>
-        <li>Điểm trung bình < 5.0 là hạng F </li>
+        <li>Điểm trung bình >=7.0 và nhỏ hơn 9.0 là hạng B</li>
+        <li>Điểm trung bình >=5.0 và nhỏ hơn 7.0 là hạng C </li>
+        <li>Điểm trung bình nhỏ hơn 5.0 là hạng F </li>
     </ul>
 </body>
 </html>
