--- a/session-7/homeworkss7/hw7-5/hw7-5.html
+++ b/session-7/homeworkss7/hw7-5/hw7-5.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 7 - 5</title>
+    <script src="hw7-5.js"></script>
 </head>
 
 <body>
+
     <h3>Cửa hàng của bạn nhận gửi bán sản phẩm cho một công ty khác và hưởng hoa hồng, <br>
         với mức hoa hồng theo doanh số bán như sau: </h3>
     <ul>
