--- a/session-7/homeworkss7/hw7-6/hw7-6.html
+++ b/session-7/homeworkss7/hw7-6/hw7-6.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 7 - 6</title>
+    <script src="hw7-6.js"></script>
 </head>
 <body>
     <h3>Tìm nghiệm của phương trình bậc hai ax2 + bx + c = 0. Biết rằng:  </h3>
     <ul>
         <li>Nếu a và b cùng bằng 0 thì phương trình vô nghiệm.</li>
-        <li>Nếu a=0 thì phương trình có một nghiệm là (-c/b).</li>
-        <li>Nếu b2-4ac < 0, thì phương trình vô nghiệm</li>
+        <li>Nếu a = 0 thì phương trình có một nghiệm là (-c/b).</li>
+        <li>Nếu b2-4ac nhỏ hơn 0, thì phương trình vô nghiệm</li>
         <li>Nếu không, phương trình có hai nghiệm, dùng công thức tính nghiệm để tính.</li>
     </ul>
 </body>
