update homework to ss8-1

--- a/session-7/index.html
+++ b/session-7/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js"></script>
     <title>JavaScripts</title>
+
 </head>
 <body>
     <h1>hell no</h1>
-    <p>
+    <!-- <p>
         alert: print on popup screen right away; or use function to show it later;
         console : .log / .error /.warn
         <br>
@@ -22,7 +23,13 @@
     <h4>Var vs LET & CONST</h4>
     <p>
         use in: { } (scope)
-        var chiu anh huong boi scope FUNCTION, con lai thi ko
+        var chiu anh huong boi scope FUNCTION, con lai thi ko -->
+
+        <p>Variable: Biến</p>
+        <p>var / let / const</p>
+
+        console.log()
+
     </p>
 </body>
 </html>
