--- a/session-9/OH1.html
+++ b/session-9/OH1.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
-    <title>Session 9</title>
+    <title>OH 1</title>
+    <script src="OH1.js"></script>
 </head>
 <body>
-    co 1 parameter <br>
-    chuc nang in ra xin chao + ten 
     
 </body>
 </html>
